<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/avatar_1"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_ubicacion" />

        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_inquilino" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_contrato" />
    </group>
</menu>